# src/views/MAttachmentView.ts
@@ -1,0 +1,4 @@
+export interface MAttachmentView {
+    media: string;
+    data: string;
+}
