# swagger/output/routes.ts
@@ -164,6 +164,12 @@ const models: TsoaRoute.Models = {
             "houseHolder": { "dataType": "string" },
         },
     },
+    "MAttachmentView": {
+        "properties": {
+            "media": { "dataType": "string", "required": true },
+            "data": { "dataType": "string", "required": true },
+        },
+    },
     "UserViewDetails": {
         "properties": {
             "code": { "dataType": "string", "required": true },
@@ -613,7 +619,7 @@ export function RegisterRoutes(app: any) {
         authenticateMiddleware([{ "name": "jwt" }]),
         function(request: any, response: any, next: any) {
             const args = {
-                avatar: { "in": "body", "name": "avatar", "required": true, "ref": "AttachmentView" },
+                avatar: { "in": "body", "name": "avatar", "required": true, "ref": "MAttachmentView" },
                 req: { "in": "request", "name": "req", "required": true, "dataType": "object" },
             };
 
